Simplify README by removing details about explicit toolchains
Explicit toolchains are those configured through
forkOptions.javaHome or forkOptions.executable.